--- a/tasks/guest.yml
+++ b/tasks/guest.yml
@@ -2,12 +2,12 @@
 
 - name: Report current value for VM guest
   ansible.builtin.debug:
-    var: ansible_virtualization_type
+    var: ansible_facts.virtualization_type
 
 - name: Install QEMU package
   ansible.builtin.package:
     name: qemu-guest-agent
     state: present
-  when: ansible_virtualization_type == "kvm"
+  when: ansible_facts.virtualization_type == "kvm"
   become: true
   become_user: root
