--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
 
-- name: This vm virtualization role is {{ ansible_virtualization_role }}
+- name: This vm virtualization role is {{ ansible_facts.virtualization_role }}
   ansible.builtin.import_tasks: guest.yml
-  when: ansible_virtualization_role == "guest"
+  when: ansible_facts.virtualization_role == "guest"
